--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerie od Maji a Julie</title>
+    <title>CoreCore</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="banner">Galerie od Maji a Julie</div>
+    <div class="banner">CoreCore</div>
     <div class="map-container">
-        <!-- pozice max 40%, klidne -->
-        <img class="item" src="items/CauAhoj.jpg" alt="Pozdrav" style="left: 10%; top: 20%;">
-        <img class="item" src="items/Holub.jpg" alt="Divocina" style="left: 30%; top: 40%;">
-        <img class="item" src="items/EroticCity.jpg" alt="Intimita" style="left: 30%; top: 10%;">
-        <img class="item" src="items/Flaska.jpg" alt="Potopa" style="left: 20%; top: 20%;">
-        <img class="item" src="items/Kresba.jpg" alt="skibidi" style="left: 20%; top: 20%;">
-        <img class="item" src="items/Glitch.jpg" alt="Porucha" style="left: 20%; top: 20%;">
-        <img class="item" src="items/Kapr.jpg" alt="Krása Vánoc" style="left: 20%; top: 20%;">
-        <img class="item" src="items/Kondom.jpg" alt="I les je místo" style="left: 30%; top: 30%;">
-        <img class="item" src="items/Kytka.jpg" alt="Měkký beton" style="left: 20%; top: 30%;">
+        <!--Obrázky-->
+        <img class="item" src="items/Brno.jpg" alt="Brno" style = "left: 1%; top: 160px;">
+        <img class="item" src="items/CauAhoj.jpg" alt="Pozdrav" style="left:4%; top: 40px;">
+        <img class="item" src="items/Holub.jpg" alt="Divocina" style="left:7%; top: 480px">
+        <img class="item" src="items/EroticCity.jpg" alt="Intimita" style="left: 10%; top: 18px;">
+        <img class="item" src="items/Flaska.jpg" alt="Potopa" style="left: 12% ; top: 210px;">
+        <img class="item" src="items/Kresba.jpg" alt="Julie" style="left: 15%; top: 380px; border-style: none;">
+        <img class="item" src="items/Glitch.jpg" alt="Porucha" style="left: 18%; top: 40px;">
+        <img class="item" src="items/Kapr.jpg" alt="Krása Vánoc" style="left: 23%; top: 254px;">
+        <img class="item" src="items/Kondom.jpg" alt="I les je místo" style="left: 27%; top: 70px;">
+        <img class="item" src="items/Kytka.jpg" alt="Měkký beton" style="left: 29%; top: 360px;">
+        <img class="item" src="items/Milk.jpg" alt="Měkký beton" style="left: 2%; top: 520px;">
+        <img class="item" src="items/Cross.jpg" alt="Měkký beton" style="left: 22%; top: 423px;">
+
+        <!--Spotify-->
+         <img class="item" src="items/Spotify1.jpg" alt="sunshine" style="left: 4%; top: 380px;">
+         <img class="item" src="items/Spotify2.jpg" alt="no words needed" style="left: 22%; top: 423px;">
+         <img class="item" src="items/Spotify3.jpg" alt="Remember 2020?" style="left: 23%; top: 170px;">
+         <img class="item" src="items/Spotify4.jpg" alt="Hůbi" style="left: 12%; top: 620px;">
+         <img class="item" src="items/Spotify5.jpg" alt="Orgie" style="left: 3%; top: 260px;">
+         <img class="item" src="items/Spotify6.jpg" alt="Bedřích Smetana 2.0" style="left: 18%; top: 330px;">
         <div class="info-box"></div>
     </div>
     <script src="script.js"></script>
