--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <img class="item" src="items/Brno.jpg" alt="Brno" style = "left: 1%; top: 60px;">
         <img class="item" src="items/CauAhoj.jpg" alt="Pozdrav" style="left: 28%; top: 530px;">
         <img class="item" src="items/Holub.jpg" alt="Divocina" style="left:41%; top: 20px;max-height: 20vw;">
-        <img class="item" src="items/EroticCity.jpg" alt="Intimita" style="left: 10%; top: 18px;">
-        <img class="item" src="items/Flaska.jpg" alt="Potopa" style="left: 35% ; top: 450px;">
+        <img class="item" src="items/EroticCity.jpg" alt="Intimita" style="left: 10%; top: 18px; max-height: 20vw;">
+        <img class="item" src="items/Flaska.jpg" alt="Potopa" style="left: 45% ; top: 490px;">
         <img class="item" src="items/Julie.jpg" alt="Julie za 20 let" style="left: 15%; top: 360px;">
-        <img class="item" src="items/Glitch.jpg" alt="Porucha" style="left: 18%; top: 40px;">
-        <img class="item info-boxJul" src="items/Kapr.jpg" alt="Krása Vánoc" style="left: 23%; top: 254px;">
-        <img class="item" src="items/Kondom.jpg" alt="I les je místo" style="left: 28%; top: 10px;">
-        <img class="item" src="items/Kytka.jpg" alt="Měkký beton" style="left:43%; top: 390px;max-height: 20vw;">
+        <img class="item" src="items/Glitch.jpg" alt="Porucha" style="left: 24%; top: 40px;">
+        <img class="item info-boxJul" src="items/Kapr.jpg" alt="Krása Vánoc" style="left: 48%; top: 254px;">
+        <img class="item" src="items/Kondom.jpg" alt="I les je místo" style="left: 66%; top: 10px;">
+        <img class="item" src="items/Kytka.jpg" alt="Měkký beton" style="left:80%; top: 50px;max-height: 20vw;">
         <img class="item" src="items/Milk.jpg" alt="Příroda" style="left: 2%; top: 520px;">
-        <img class="item" src="items/Cross.jpg" alt="Omalovánky" style="left: 22%; top: 423px;">
+        <img class="item" src="items/Cross.jpg" alt="Omalovánky" style="left: 76%; top: 423px;">
         <img class="item" src="items/Juli.jpg" alt="Julie" style="left: 0,4%; top: 400px;">
         <img class="item" src="items/quote1.jpg" alt="že ano?" style="left: 36%; top: 100px;">
 
         <!--Spotify-->
-         <img class="item" src="items/Spotify1.jpg" alt="Dětské léta" style="left: 4%; top: 380px;">
+         <img class="item" src="items/Spotify1.jpg" alt="Dětské léta" style="left: 53%; top: 380px;">
          <img class="item" src="items/Spotify2.jpg" alt="beze slov" style="left: 28%; top: 423px;">
-         <img class="item" src="items/Spotify3.jpg" alt="Pamatuješ 2020?" style="left: 21%; top: 185px;">
-         <img class="item" src="items/Spotify4.jpg" alt="Hůbi" style="left: 12%; top: 620px;">
-         <img class="item" src="items/Spotify5.jpg" alt="Orgie" style="left: 3%; top: 260px; max-height: 60vw;">
-         <img class="item" src="items/Spotify6.jpg" alt="Bedřích Smetana 2.0" style="left: 36%; top: 330px;">
+         <img class="item" src="items/Spotify3.jpg" alt="Pamatuješ 2020?" style="left: 21%; top: 245px;">
+         <img class="item" src="items/Spotify4.jpg" alt="Hůbi" style="left: 70%; top: 600px;">
+         <img class="item" src="items/Spotify5.jpg" alt="Orgie" style="left: 67%; top: 280px; max-height: 60vw;">
+         <img class="item" src="items/Spotify6.jpg" alt="Bedřích Smetana 2.0" style="left: 56%; top: 220px;">
         <div class="info-box"></div>
     </div>
     <script src="script.js"></script>
